--- a/ShoppOnline/wwwroot/index.html
+++ b/ShoppOnline/wwwroot/index.html
@@ -21,6 +21,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
 
     <script src="_framework/blazor.webassembly.js"></script>
 
